--- a/package.json
+++ b/package.json
@@ -4,53 +4,60 @@
     "description": "FULLSCO Backend API Server",
     "main": "dist/index.js",
     "scripts": {
-      "dev": "tsx watch src/index.ts",
-      "build": "tsc",
-      "start": "node dist/index.js",
-      "db:generate": "drizzle-kit generate",
-      "db:migrate": "drizzle-kit migrate",
-      "db:studio": "drizzle-kit studio",
-      "db:seed": "tsx src/db/seed.ts"
+        "dev": "tsx watch src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:studio": "drizzle-kit studio",
+        "db:seed": "tsx src/db/seed.ts"
     },
-    "keywords": ["api", "backend", "express", "postgresql", "drizzle"],
+    "keywords": [
+        "api",
+        "backend",
+        "express",
+        "postgresql",
+        "drizzle"
+    ],
     "author": "FULLSCO Team",
     "license": "MIT",
     "dependencies": {
-      "@neondatabase/serverless": "^1.0.0",
-      "bcrypt": "^6.0.0",
-      "bcryptjs": "^3.0.2",
-      "body-parser": "^1.20.3",
-      "connect-pg-simple": "^10.0.0",
-      "cors": "^2.8.5",
-      "dotenv": "^16.5.0",
-      "drizzle-kit": "^0.27.2",
-      "drizzle-orm": "^0.38.4",
-      "drizzle-zod": "^0.6.1",
-      "express": "^4.21.2",
-      "express-session": "^1.18.1",
-      "helmet": "^8.0.0",
-      "jsonwebtoken": "^9.0.2",
-      "multer": "^2.0.1",
-      "passport": "^0.7.0",
-      "passport-local": "^1.0.0",
-      "pg": "^8.15.6",
-      "zod": "^3.24.4"
+        "@neondatabase/serverless": "^1.0.0",
+        "bcrypt": "^6.0.0",
+        "bcryptjs": "^3.0.2",
+        "body-parser": "^1.20.3",
+        "connect-pg-simple": "^10.0.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
+        "drizzle-kit": "^0.27.2",
+        "drizzle-orm": "^0.38.4",
+        "drizzle-zod": "^0.6.1",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
+        "helmet": "^8.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.1",
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.15.6",
+        "window": "^4.2.7",
+        "zod": "^3.24.4"
     },
     "devDependencies": {
-      "@types/bcryptjs": "^2.4.6",
-      "@types/cors": "^2.8.17",
-      "@types/express": "^5.0.1",
-      "@types/express-session": "^1.18.2",
-      "@types/jsonwebtoken": "^9.0.7",
-      "@types/multer": "^2.0.0",
-      "@types/passport": "^1.0.17",
-      "@types/passport-local": "^1.0.38",
-      "@types/pg": "^8.15.0",
-      "@types/node": "^22.0.0",
-      "tsx": "^4.19.3",
-      "typescript": "^5.6.3"
+        "@types/bcryptjs": "^2.4.6",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/express-session": "^1.18.2",
+        "@types/jsonwebtoken": "^9.0.7",
+        "@types/multer": "^2.0.0",
+        "@types/node": "^22.0.0",
+        "@types/passport": "^1.0.17",
+        "@types/passport-local": "^1.0.38",
+        "@types/pg": "^8.15.0",
+        "tsx": "^4.19.3",
+        "typescript": "^5.6.3"
     },
     "engines": {
-      "node": ">=18.0.0"
+        "node": ">=18.0.0"
     }
-  }
+}
