--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "express-session": "^1.18.1",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
+        "memorystore": "^1.6.7",
         "mongodb": "^6.17.0",
         "mongoose": "^8.16.3",
         "multer": "^2.0.1",
