--- a/package.json
+++ b/package.json
@@ -45,30 +45,32 @@
         "drizzle-orm": "^0.38.4",
         "drizzle-zod": "^0.6.1",
         "express": "^4.21.2",
-        "express-session": "^1.18.1",
-        "helmet": "^8.0.0",
+        "express-session": "^1.18.2",
+        "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "memorystore": "^1.6.7",
         "mongodb": "^6.17.0",
-        "mongoose": "^8.16.3",
-        "multer": "^2.0.1",
+        "mongoose": "^8.16.4",
+        "multer": "^2.0.2",
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "pg": "^8.15.6",
         "psql": "^0.0.1",
         "vitest": "^3.2.4",
         "window": "^4.2.7",
-        "zod": "^3.24.4"
+        "zod": "^3.25.76"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.1",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
         "@types/express-session": "^1.18.2",
+        "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.14",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/mongodb": "^4.0.6",
         "@types/multer": "^2.0.0",
-        "@types/node": "^22.0.0",
+        "@types/node": "^22.16.5",
         "@types/passport": "^1.0.17",
         "@types/passport-local": "^1.0.38",
         "@types/pg": "^8.15.0",
