--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,5 +36,6 @@
       "node_modules",
       "dist",
       "**/*.test.ts"
-    ]
+    ],
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   }
