--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "license": "MIT",
     "dependencies": {
         "@neondatabase/serverless": "^1.0.0",
+        "@types/node": "^22.16.5",
         "bcrypt": "^6.0.0",
         "bcryptjs": "^3.0.2",
         "body-parser": "^1.20.3",
