--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "exclude": [
       "node_modules",
       "dist",
-      "src/__test__",
+      "src/__tests__",
       "**/*.test.ts"
     ],
   }
